# bg-generation-triangle

./: CMakeLists.txt  README.md
.github/workflows/: cpp.yml
src/: geometry.hpp  libsvg.hpp  main.cpp  mainPleasing.cpp  mainRegular.cpp  penrose.hpp  save.hpp  triangle.hpp
